# safecore-installer

./: .gitignore  AppButton.qml  AppCard.qml  CMakeLists.txt  ConsoleLog.qml  ModernProgressBar.qml  PathPicker.qml  README.md  SafeCoreDialog.qml  StepRow.qml  Theme.qml  appconstants.h  appcontroller.cpp  appcontroller.h  downloadtask.cpp  downloadtask.h  main.cpp  main.qml  qml.qrc  registrationservice.cpp  registrationservice.h  resources.qrc  safecore_ops.qml  safespace_global_ops.qml
scripts/: bundle_runtime.sh  install_prereqs.sh
